Fixed some spacing

--- a/css/main.css
+++ b/css/main.css
@@ -44,3 +44,7 @@ hr {
 .caption {
 	text-align: center;
 }
+
+.thumbnail {
+	margin-bottom: 10%;
+}
